--- a/app/src/main/res/layout/activity_pq_doar.xml
+++ b/app/src/main/res/layout/activity_pq_doar.xml
@@ -4,20 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fundotoy"
     android:textAlignment="center"
     tools:context=".PqDoar">
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/fundonuvenstoystory" />
 
     <View
         android:id="@+id/logincadastro"
@@ -49,8 +38,11 @@
         android:id="@+id/imageView5"
         android:layout_width="277dp"
         android:layout_height="150dp"
-        app:srcCompat="@drawable/pqdoar"
-        tools:layout_editor_absoluteX="67dp"
-        tools:layout_editor_absoluteY="22dp" />
+        android:layout_marginTop="22dp"
+        app:layout_constraintBottom_toTopOf="@+id/txtpqdoart"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/pqdoar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
