--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -4,18 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fundotoy"
     tools:context=".Principal">
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="566dp"
-        android:layout_height="918dp"
-        app:srcCompat="@drawable/fundonuvenstoystory"
-        tools:layout_editor_absoluteX="-30dp"
-        tools:layout_editor_absoluteY="-26dp" />
-
     <ImageButton
-        android:id="@+id/btnImportancia"
+        android:id="@+id/BtnPerfil"
         android:layout_width="94dp"
         android:layout_height="65dp"
         tools:layout_editor_absoluteX="158dp"
@@ -40,11 +33,15 @@
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="238dp"
-        android:layout_height="133dp"
-        app:srcCompat="@drawable/toydonation"
-        tools:layout_editor_absoluteX="86dp"
-        tools:layout_editor_absoluteY="26dp" />
+        android:layout_width="227dp"
+        android:layout_height="121dp"
+        android:layout_marginStart="92dp"
+        android:layout_marginTop="38dp"
+        android:layout_marginEnd="92dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/toydonation" />
 
     <ImageButton
         android:id="@+id/BtnBeneficio"
