--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -11,52 +11,60 @@
         android:id="@+id/BtnPerfil"
         android:layout_width="94dp"
         android:layout_height="65dp"
-        tools:layout_editor_absoluteX="158dp"
-        tools:layout_editor_absoluteY="666dp"
+        android:layout_marginStart="158dp"
+        android:layout_marginEnd="159dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
     <ImageButton
         android:id="@+id/BtnOndeDoar"
         android:layout_width="307dp"
         android:layout_height="98dp"
-        tools:layout_editor_absoluteX="52dp"
-        tools:layout_editor_absoluteY="295dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginEnd="52dp"
+        android:layout_marginBottom="30dp"
+        app:layout_constraintBottom_toTopOf="@+id/BtnComoDoar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
     <ImageButton
         android:id="@+id/BtnComoDoar"
         android:layout_width="307dp"
         android:layout_height="98dp"
-        tools:layout_editor_absoluteX="52dp"
-        tools:layout_editor_absoluteY="423dp"
-        tools:srcCompat="@tools:sample/backgrounds/scenic" />
-
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="227dp"
-        android:layout_height="121dp"
-        android:layout_marginStart="92dp"
-        android:layout_marginTop="38dp"
-        android:layout_marginEnd="92dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginEnd="52dp"
+        android:layout_marginBottom="27dp"
+        app:layout_constraintBottom_toTopOf="@+id/BtnImportancia"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/toydonation" />
-
-    <ImageButton
-        android:id="@+id/BtnBeneficio"
-        android:layout_width="293dp"
-        android:layout_height="98dp"
-        tools:layout_editor_absoluteX="59dp"
-        tools:layout_editor_absoluteY="159dp"
         tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
     <ImageButton
         android:id="@+id/BtnImportancia"
         android:layout_width="303dp"
         android:layout_height="106dp"
-        tools:layout_editor_absoluteX="52dp"
-        tools:layout_editor_absoluteY="548dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginEnd="56dp"
+        android:layout_marginBottom="12dp"
+        app:layout_constraintBottom_toTopOf="@+id/BtnPerfil"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:srcCompat="@tools:sample/backgrounds/scenic" />
+
+    <ImageButton
+        android:id="@+id/BtnBeneficio"
+        android:layout_width="304dp"
+        android:layout_height="108dp"
+        android:layout_marginStart="54dp"
+        android:layout_marginEnd="53dp"
+        android:layout_marginBottom="32dp"
+        app:layout_constraintBottom_toTopOf="@+id/BtnOndeDoar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
         tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
