--- a/app/src/main/res/layout/activity_ondedoar.xml
+++ b/app/src/main/res/layout/activity_ondedoar.xml
@@ -8,81 +8,37 @@
     tools:context=".Ondedoar">
 
     <View
-        android:id="@+id/logincadastro3"
-        android:layout_width="349dp"
-        android:layout_height="135dp"
-        android:background="@drawable/fundotxt"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.79" />
-
-    <View
-        android:id="@+id/logincadastro2"
-        android:layout_width="349dp"
-        android:layout_height="135dp"
-        android:background="@drawable/fundotxt"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="274dp"
-        android:layout_height="62dp"
-        android:text="instituição2"
-        android:textSize="48sp"
-        app:layout_constraintBottom_toBottomOf="@+id/logincadastro2"
-        app:layout_constraintEnd_toEndOf="@+id/logincadastro2"
-        app:layout_constraintStart_toStartOf="@+id/logincadastro2"
-        app:layout_constraintTop_toTopOf="@+id/logincadastro2" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="274dp"
-        android:layout_height="62dp"
-        android:text="instituição3"
-        android:textSize="48sp"
-        app:layout_constraintBottom_toBottomOf="@+id/logincadastro3"
-        app:layout_constraintEnd_toEndOf="@+id/logincadastro3"
-        app:layout_constraintStart_toStartOf="@+id/logincadastro3"
-        app:layout_constraintTop_toTopOf="@+id/logincadastro3" />
-
-    <View
         android:id="@+id/logincadastro"
-        android:layout_width="349dp"
-        android:layout_height="135dp"
+        android:layout_width="358dp"
+        android:layout_height="425dp"
+        android:layout_marginTop="122dp"
+        android:layout_marginBottom="196dp"
         android:background="@drawable/fundotxt"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.201" />
+        app:layout_constraintTop_toTopOf="@+id/imageView2" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="274dp"
-        android:layout_height="62dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="27dp"
-        android:layout_marginBottom="43dp"
-        android:text="instituição1"
+        android:id="@+id/txtinstituicao1"
+        android:layout_width="275dp"
+        android:layout_height="296dp"
+        android:layout_marginStart="42dp"
+        android:layout_marginTop="9dp"
+        android:layout_marginEnd="41dp"
+        android:text="@string/txtinstituicao1"
         android:textSize="48sp"
-        app:layout_constraintBottom_toBottomOf="@+id/logincadastro"
         app:layout_constraintEnd_toEndOf="@+id/logincadastro"
-        app:layout_constraintHorizontal_bias="0.77"
         app:layout_constraintStart_toStartOf="@+id/logincadastro"
-        app:layout_constraintTop_toTopOf="@+id/logincadastro"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="247dp"
         android:layout_height="142dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintBottom_toTopOf="@+id/txtinstituicao1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -91,10 +47,30 @@
 
     <Button
         android:id="@+id/BtnMapa"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="193dp"
+        android:layout_height="71dp"
+        android:layout_marginStart="109dp"
+        android:layout_marginTop="37dp"
+        android:layout_marginEnd="109dp"
+        android:layout_marginBottom="78dp"
+        android:backgroundTint="@color/azulbotao"
         android:text="@string/BtnMapa"
-        tools:layout_editor_absoluteX="160dp"
-        tools:layout_editor_absoluteY="644dp" />
+        android:textSize="34sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/logincadastro" />
+
+    <TextView
+        android:id="@+id/txtinstituiçãodescr"
+        android:layout_width="339dp"
+        android:layout_height="111dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginEnd="9dp"
+        android:text="@string/txtinstituicaodescr"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toBottomOf="@+id/logincadastro"
+        app:layout_constraintEnd_toEndOf="@+id/logincadastro"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
