--- a/app/src/main/res/layout/activity_pq_doar.xml
+++ b/app/src/main/res/layout/activity_pq_doar.xml
@@ -10,29 +10,31 @@
 
     <View
         android:id="@+id/logincadastro"
-        android:layout_width="356dp"
-        android:layout_height="404dp"
+        android:layout_width="341dp"
+        android:layout_height="561dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="48dp"
         android:background="@drawable/fundotxt"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.474" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView5"
+        app:layout_constraintVertical_bias="0.963" />
 
     <TextView
         android:id="@+id/txtpqdoart"
-        android:layout_width="305dp"
-        android:layout_height="362dp"
+        android:layout_width="299dp"
+        android:layout_height="464dp"
         android:layout_gravity="center"
+        android:layout_marginTop="11dp"
+        android:layout_marginBottom="84dp"
         android:text="@string/PqDoarTxt"
         android:textAlignment="center"
-        android:textSize="34sp"
+        android:textSize="32sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.466" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 
     <ImageView
         android:id="@+id/imageView5"
@@ -43,6 +45,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/pqdoar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
