--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -4,67 +4,76 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fundotoy"
+    android:background="@drawable/fundoprincipal"
+    android:orientation="horizontal"
     tools:context=".Principal">
 
     <ImageButton
-        android:id="@+id/BtnPerfil"
-        android:layout_width="94dp"
-        android:layout_height="65dp"
-        android:layout_marginStart="158dp"
-        android:layout_marginEnd="159dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:srcCompat="@tools:sample/backgrounds/scenic" />
-
-    <ImageButton
-        android:id="@+id/BtnOndeDoar"
-        android:layout_width="307dp"
-        android:layout_height="98dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginEnd="52dp"
-        android:layout_marginBottom="30dp"
-        app:layout_constraintBottom_toTopOf="@+id/BtnComoDoar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:srcCompat="@tools:sample/backgrounds/scenic" />
-
-    <ImageButton
-        android:id="@+id/BtnComoDoar"
-        android:layout_width="307dp"
-        android:layout_height="98dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginEnd="52dp"
-        android:layout_marginBottom="27dp"
-        app:layout_constraintBottom_toTopOf="@+id/BtnImportancia"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:srcCompat="@tools:sample/backgrounds/scenic" />
-
-    <ImageButton
         android:id="@+id/BtnImportancia"
-        android:layout_width="303dp"
-        android:layout_height="106dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginEnd="56dp"
-        android:layout_marginBottom="12dp"
-        app:layout_constraintBottom_toTopOf="@+id/BtnPerfil"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:srcCompat="@tools:sample/backgrounds/scenic" />
-
-    <ImageButton
-        android:id="@+id/BtnBeneficio"
-        android:layout_width="304dp"
+        android:layout_width="319dp"
         android:layout_height="108dp"
-        android:layout_marginStart="54dp"
-        android:layout_marginEnd="53dp"
-        android:layout_marginBottom="32dp"
-        app:layout_constraintBottom_toTopOf="@+id/BtnOndeDoar"
+        android:layout_marginStart="46dp"
+        android:layout_marginTop="130dp"
+        android:layout_marginEnd="46dp"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        tools:srcCompat="@tools:sample/backgrounds/scenic" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/btnimportancia" />
+
+    <ImageButton
+        android:id="@+id/BtnComoDoar"
+        android:layout_width="318dp"
+        android:layout_height="124dp"
+        android:layout_marginStart="47dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="46dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/BtnBeneficio"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/BtnImportancia"
+        app:srcCompat="@drawable/btncomodoar" />
+
+    <ImageButton
+        android:id="@+id/BtnBeneficio"
+        android:layout_width="322dp"
+        android:layout_height="122dp"
+        android:layout_marginStart="47dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="42dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/BtnComoDoar"
+        app:srcCompat="@drawable/btnbeneficio" />
+
+    <ImageButton
+        android:id="@+id/BtnOndeDoar"
+        android:layout_width="317dp"
+        android:layout_height="110dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="14dp"
+        android:layout_marginEnd="42dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/BtnBeneficio"
+        app:srcCompat="@drawable/btnondedoar" />
+
+    <ImageView
+        android:id="@+id/BtnPerfil"
+        android:layout_width="64dp"
+        android:layout_height="90dp"
+        android:layout_marginStart="173dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="174dp"
+        android:onClick="@string/BtnCadastrar1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/BtnOndeDoar"
+        app:srcCompat="@drawable/btnperfil" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
