arrumando os layouts

--- a/app/src/main/res/layout/activity_como_doar.xml
+++ b/app/src/main/res/layout/activity_como_doar.xml
@@ -51,6 +51,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/txtcomodoart"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/comodoar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
