--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -15,7 +15,9 @@
         android:layout_marginStart="46dp"
         android:layout_marginTop="130dp"
         android:layout_marginEnd="46dp"
+        android:layout_marginBottom="12dp"
         android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/BtnComoDoar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,26 +26,28 @@
 
     <ImageButton
         android:id="@+id/BtnComoDoar"
-        android:layout_width="318dp"
-        android:layout_height="124dp"
+        android:layout_width="315dp"
+        android:layout_height="111dp"
         android:layout_marginStart="47dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="46dp"
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toTopOf="@+id/BtnBeneficio"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/BtnImportancia"
         app:srcCompat="@drawable/btncomodoar" />
 
     <ImageButton
         android:id="@+id/BtnBeneficio"
-        android:layout_width="322dp"
-        android:layout_height="122dp"
+        android:layout_width="321dp"
+        android:layout_height="108dp"
         android:layout_marginStart="47dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="42dp"
+        android:layout_marginBottom="14dp"
+        app:layout_constraintBottom_toTopOf="@+id/BtnOndeDoar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,11 +56,13 @@
 
     <ImageButton
         android:id="@+id/BtnOndeDoar"
-        android:layout_width="317dp"
-        android:layout_height="110dp"
+        android:layout_width="328dp"
+        android:layout_height="102dp"
         android:layout_marginStart="52dp"
         android:layout_marginTop="14dp"
         android:layout_marginEnd="42dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/BtnPerfil"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/BtnBeneficio"
@@ -67,13 +73,28 @@
         android:layout_width="64dp"
         android:layout_height="90dp"
         android:layout_marginStart="173dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="174dp"
         android:onClick="@string/BtnCadastrar1"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/BtnOndeDoar"
         app:srcCompat="@drawable/btnperfil" />
+
+    <ImageView
+        android:id="@+id/imageView12"
+        android:layout_width="162dp"
+        android:layout_height="78dp"
+        android:layout_marginStart="124dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="125dp"
+        android:layout_marginBottom="9dp"
+        app:layout_constraintBottom_toTopOf="@+id/BtnImportancia"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/toydonation" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
