--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,18 +8,22 @@
     tools:context=".Login" >
 
     <Button
-        android:id="@+id/btnlogin"
-        android:layout_width="137dp"
-        android:layout_height="56dp"
-        android:layout_marginStart="137dp"
-        android:layout_marginTop="438dp"
-        android:layout_marginEnd="137dp"
-        android:layout_marginBottom="237dp"
-        android:text="Button"
+        android:id="@+id/BtnLogin1"
+        android:layout_width="193dp"
+        android:layout_height="71dp"
+        android:layout_marginStart="109dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="109dp"
+        android:layout_marginBottom="229dp"
+        android:backgroundTint="@color/azulbotao"
+        android:text="@string/BtnLogin1"
+        android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
         android:id="@+id/imageView10"
@@ -29,10 +33,54 @@
         android:layout_marginTop="138dp"
         android:layout_marginEnd="74dp"
         android:layout_marginBottom="258dp"
-        app:layout_constraintBottom_toTopOf="@+id/btnlogin"
+        app:layout_constraintBottom_toTopOf="@+id/BtnLogin1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/login" />
+
+    <TextView
+        android:id="@+id/txtSenha"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="83dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginBottom="76dp"
+        android:text="@string/txtSenha"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toTopOf="@+id/BtnLogin1"
+        app:layout_constraintEnd_toStartOf="@+id/edtxtSenhaLogin"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edtxtNomeLogin" />
+
+    <EditText
+        android:id="@+id/edtxtNomeLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="99dp"
+        android:layout_marginTop="52dp"
+        android:layout_marginEnd="102dp"
+        android:layout_marginBottom="38dp"
+        android:ems="10"
+        android:inputType="text"
+        android:text="Name"
+        app:layout_constraintBottom_toTopOf="@+id/edtxtSenhaLogin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView10" />
+
+    <EditText
+        android:id="@+id/edtxtSenhaLogin"
+        android:layout_width="165dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="38dp"
+        android:layout_marginEnd="86dp"
+        android:ems="10"
+        android:inputType="textPassword"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/txtSenha"
+        app:layout_constraintTop_toBottomOf="@+id/edtxtNomeLogin" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
