--- a/app/src/main/res/layout/activity_ondedoar.xml
+++ b/app/src/main/res/layout/activity_ondedoar.xml
@@ -27,8 +27,10 @@
         android:layout_marginStart="42dp"
         android:layout_marginTop="9dp"
         android:layout_marginEnd="41dp"
+        android:layout_marginBottom="21dp"
         android:text="@string/txtinstituicao1"
         android:textSize="48sp"
+        app:layout_constraintBottom_toTopOf="@+id/txtinstituiçãodescr"
         app:layout_constraintEnd_toEndOf="@+id/logincadastro"
         app:layout_constraintStart_toStartOf="@+id/logincadastro"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
