--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -55,12 +55,13 @@
         android:layout_width="169dp"
         android:layout_height="44dp"
         android:layout_marginStart="155dp"
+        android:layout_marginTop="170dp"
         android:layout_marginEnd="87dp"
         android:ems="10"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="282dp" />
+        app:layout_constraintTop_toTopOf="@+id/imageView11" />
 
     <EditText
         android:id="@+id/edtxtTelefone"
