--- a/app/src/main/res/layout/activity_pq_doar.xml
+++ b/app/src/main/res/layout/activity_pq_doar.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     android:background="@drawable/fundotoy"
     android:textAlignment="center"
     tools:context=".PqDoar">
@@ -34,13 +35,15 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView5"
+        tools:ignore="TextSizeCheck" />
 
     <ImageView
         android:id="@+id/imageView5"
         android:layout_width="277dp"
         android:layout_height="150dp"
         android:layout_marginTop="22dp"
+        android:contentDescription="@string/todo"
         app:layout_constraintBottom_toTopOf="@+id/txtpqdoart"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
