aplicativo rodando sem erros nas telas, problema resolvido

--- a/app/src/main/res/layout/activity_como_doar.xml
+++ b/app/src/main/res/layout/activity_como_doar.xml
@@ -6,18 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".ComoDoar">
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/fundonuvenstoystory" />
-
     <View
         android:id="@+id/logincadastro"
         android:layout_width="352dp"
@@ -52,6 +40,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/comodoar" />
+        app:srcCompat="@drawable/comodoar"
+        tools:ignore="ContentDescription" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
