--- a/app/src/main/res/drawable/fundotxt.xml
+++ b/app/src/main/res/drawable/fundotxt.xml
@@ -8,7 +8,7 @@
     </item>
 
     <item>
-        <shape android:shape="@drawable/fundotoy">
+        <shape android:shape="rectangle">
             <solid android:color="@color/white"></solid>
             <corners android:radius="80sp"></corners>
         </shape>
