--- a/app/src/main/res/layout/activity_ondedoar.xml
+++ b/app/src/main/res/layout/activity_ondedoar.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fundotoy"
+    android:background="@drawable/testefundo"
     tools:context=".Ondedoar">
 
     <View
@@ -45,7 +45,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/ondedoar" />
+        app:srcCompat="@drawable/ondedoar"
+        tools:ignore="ContentDescription" />
 
     <Button
         android:id="@+id/BtnMapa"
