--- a/app/src/main/res/layout/activity_pq_doar.xml
+++ b/app/src/main/res/layout/activity_pq_doar.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    android:background="@drawable/fundotoy"
+
+    android:background="@drawable/testefundo"
     android:textAlignment="center"
     tools:context=".PqDoar">
 
