atualização de layout, apenas decorativo

--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -17,6 +17,7 @@
         android:layout_marginEnd="46dp"
         android:layout_marginBottom="12dp"
         android:orientation="horizontal"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@+id/BtnComoDoar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -33,6 +34,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="46dp"
         android:layout_marginBottom="16dp"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@+id/BtnBeneficio"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -49,6 +51,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="42dp"
         android:layout_marginBottom="14dp"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@+id/BtnOndeDoar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -59,12 +62,13 @@
 
     <ImageButton
         android:id="@+id/BtnOndeDoar"
-        android:layout_width="328dp"
-        android:layout_height="102dp"
+        android:layout_width="321dp"
+        android:layout_height="113dp"
         android:layout_marginStart="52dp"
         android:layout_marginTop="14dp"
         android:layout_marginEnd="42dp"
         android:layout_marginBottom="8dp"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@+id/BtnPerfil"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
