--- a/app/src/main/res/layout/activity_pq_doar.xml
+++ b/app/src/main/res/layout/activity_pq_doar.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
 
 
-    android:background="@drawable/testefundo"
+    android:background="@drawable/fundo"
     android:textAlignment="center"
     tools:context=".PqDoar">
 
