--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,4 +37,21 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/toydonation" />
 
+    <Button
+        android:id="@+id/butao"
+        android:layout_width="193dp"
+        android:layout_height="71dp"
+        android:layout_marginStart="109dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="109dp"
+        android:layout_marginBottom="84dp"
+        android:backgroundTint="@color/azulbotao"
+        android:text="@string/butao"
+        android:textSize="34sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnentrar" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
